torrfreedom/include/style.css
/* ... */
code::-moz-selection, code::selection {
  background: #393;
  color: #fff;
}

#header {
  margin: -12px 0 0;
  padding-top: 8px;
  position: sticky;
  top: -10px;
  z-index: 999;
  background: linear-gradient(to bottom, #232020, #151414);
  filter: drop-shadow(0 2px 2px rgba(0, 0, 0, .4));
}

#siteinfo code, #footer code {
  opacity: .75;
}

#siteinfo code:hover, #footer code:hover {
  opacity: 1;
}

input[type="submit"], input[type="reset"], input[type="radio"], input[type="file"], input[type="checkbox"], select, label {
  cursor: pointer;
}

#sitename a {
  line-height: 1;
  word-spacing: -0.05em;
  letter-spacing: 0.1em;
  font-weight: 900 !important;
  font-size: 44pt !important;
  color: #f2f2f2 !important;
  text-align: center !important;
  text-transform: uppercase;
  text-shadow: 0 0 1px #000;
  user-select: none;
}

#sitename {
  text-align: center;
}

#sitename a:hover, #sitename a:focus, #sitename a:active {
  text-decoration: none !important;
}

@supports (-webkit-background-clip: text) {
  #sitename a, #sitename a:hover, #sitename a:focus {
    text-shadow: none;
    background: repeating-linear-gradient(to bottom, rgba(0, 0, 0, .2), rgba(0, 0, 0, .5) 2px), linear-gradient(to bottom, rgba(255, 96, 0, .5), rgba(0, 0, 0, .6) 100%), linear-gradient(to bottom, #740, #520 10%, #fff 35%, #310 65%) !important;
    -webkit-background-clip: text !important;
    background-clip: text !important;
    -webkit-text-stroke-color: #fff;
    -webkit-text-stroke-width: 1px;
    -webkit-stroke-linecap: round;
    -webkit-text-fill-color: transparent !important;
    filter: drop-shadow(0 0 1px #151414) drop-shadow(0 0 2px #300) drop-shadow(0 0 2px rgba(0, 0, 0, .6));
/*    animation: linear powercycle 180s alternate infinite;*/
  }
  #sitename a:hover, #sitename a:focus, #sitename a:active {
    background: repeating-linear-gradient(to bottom, rgba(128, 64, 0, .2), rgba(0, 0, 0, .3) 2px), linear-gradient(to bottom, rgba(255, 96, 0, .1), rgba(0, 0, 0, .7) 100%), linear-gradient(to top, #f60, #520 10%, #000 35%, #f60 65%) !important;
    -webkit-background-clip: text !important;
    background-clip: text !important;
    -webkit-text-fill-color: transparent !important;
    filter: opacity(.8);
    animation: linear powercycle 10s alternate infinite;
  }
}

@keyframes powercycle {
  from {
    filter: hue-rotate(0) opacity(1) saturate(0) drop-shadow(0 0 1px #300) drop-shadow(0 0 2px #200) drop-shadow(0 0 3px rgba(0, 0, 0, .1));
  }
  to {
    filter: hue-rotate(360deg) opacity(1) saturate(1) drop-shadow(0 0 2px #400) drop-shadow(0 0 3px rgba(255, 96, 0, .5)) drop-shadow(0 0 4px rgba(0, 0, 0, .5));
  }
}

.main, form {
  text-align: center;
}

table {
  margin: auto;
  width: 100%;
  border-collapse: collapse !important;
}

a:visited {
  color: #a61;
}

a:link {
  color: #c83;
  text-shadow: 0 1px 1px #222;
  text-decoration: none;
  outline: none;
}

a:hover, a:focus {
  color: #f60;
  text-decoration: underline;
}

a:active {
  color: #d30;
}

td a img {
  opacity: .7;
}

td a:hover img, td a:focus img {
  opacity: 1;
}

a, b, label {
  font-weight: 600 !important;
}

ul {
  list-style: none;
}

tr:nth-child(odd), #server tr:nth-child(odd) {
  background: #454242 !important;
}

tr:nth-child(even), #server tr:nth-child(even) {
  background: #343131 !important;
}

table table tr:nth-child(odd) {
  background: #676565 !important;
}

table table tr:nth-child(even) {
  background: #565353 !important;
}

table table tr {
  border: 1px solid #333;
}

table table td {
  color: #ddd;
}

th, #dostuff td {
  padding: 8px !important;
  font-size: 110%;
  font-weight: 600 !important;
  background: linear-gradient(to bottom, #343131, #232020) !important;
}

#torrents {
  width: 100% !important;
  border: 1px solid #111 !important;
  will-change: transform;
}

#torrents th, #torrents td {
  padding: 4px 12px;
}

#torrents th, #torrents th a {
  text-align: center !important;
  color: rgba(255, 255, 255, .6);
}

#torrents th:nth-child(2), #torrents td:nth-child(2) {
  text-align: left;
}

#torrents th:nth-child(n+3), #torrents td:nth-child(n+3) {
  text-align: center;
}

#torrents td:first-child::after {
  content: "";
  display: inline-block;
  height: 36px;
  vertical-align: middle;
}

#torrents img {
  vertical-align: middle;
}

#torrents th:nth-child(2) {
  text-align: left !important;
}

#torrents td {
  padding-top: 4px !important;
  padding-bottom: 4px !important;
  border-bottom: 1px solid #222 !important;
}

#torrents td:first-child, #torrents td:nth-child(2) {
  position: relative;
  vertical-align: middle !important;
}

#torrents td:first-child {
  width: 1%;
  white-space: nowrap;
}

#torrents td:first-child a {
  font-weight: 700 !important;
}

#torrents td:nth-child(2), #torrents td:nth-child(2) a, #torrents .briefdesc {
  line-height: 1;
}

#torrents .torrentname {
  max-width: 500px;
}

#torrents .briefdesc {
  margin-top: 2px;
  max-width: 500px;
  display: inline-block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.briefdesc::after {
  margin-bottom: 2px;
  width: 100%;
  height: 1px;
  display: block;
  vertical-align: bottom;
  content: "";
}

#torrents td:nth-child(odd) {
  background: rgba(0, 0, 0, .01) !important;
}

#torrents td:nth-child(even) {
  background: rgba(255, 255, 255, .01) !important;
}

#torrents tr:nth-child(n+2):hover td, #filelist tr:hover {
  background: #2a2525 !important;
  border-color: transparent !important;
}

#torrents td:nth-child(3), #torrents td:nth-child(7) {
  white-space: nowrap;
}

#torrents td:nth-child(7) {
  word-spacing: -0.1em;
}

#torrents .dlicons img {
  margin: 0 2px;
}
/* ... */

